Changelog
=========

3.1.2 (unreleased)
------------------

- Adjusted seperator of the `grouped_by_three` formatter.
  [phgross]

- Corrected message after resolving a subdossier.
  [phgross]

- Inbox overview: List only active tasks and forwardings.
  [phgross]

- Inbox overview: Only list current part of a predecessor/successor couple.
  [phgross]

- Override livesearch_reply.py to provide correct advanced search link.
  [lgraf]

- Hide paste action for template dossier and contact folder.
  [lgraf]

- Activate selction controlls for the `my documents` Tab.
  [phgross]

- Advancedsearch: Dropped reference number solution.
  [phgross]

- OGDS Listing: Display empty string for users without a name or firstname.
  [phgross]

- OGDS updater: Make check for AD user IDs more robust.
  [lgraf]

- DefaultDocumentIndexer: Store transform cache on context.file._blob, not context.file.
  (NamedFileInstances are not recreated when updating file contents)
  [lgraf]

- LDAP util: Make sure we still deal with multivaluedness for non-user
  objects (fix for bug introduced in 1daa9ba).
  [lgraf]

- LDAP import: Deal with Active Directory nested groups.
  [lgraf]

- OGDS updater: Consider all possible member attribute names when getting members from a group.
  [lgraf]

- LDAP util: Consider all possible objectClasses when searching for groups.
  [lgraf]

- LDAP util: Only apply schema mapping to user objects.
  [lgraf]

- DefaultDocumentIndexer: Catch any exceptions raised by transforms and log them.
  [lgraf]

- OGDS updater: Deactivate is_ldap_reachable check. It's unnecessary and broken.
  [lgraf]

- OGDS updater: Deal with mutli-valued fields named the same as an OGDS column.
  [lgraf]

- Modify indexer for documents so that it queries for our own IDocumentIndexer adapter,
  allowing us to choose to index original documents or their preview PDF, depdending on
  opengever.pdfconverter being installed or not.
  [lgraf]
